# iVibe.live-Pro

./: AGENT.md  AGENTS.md  AGENTS.md here.  LICENSE  README.md
backend/: AGENT.md  Cargo.toml  README.md
backend/api/: AGENT.md  README.md
backend/api/graphql-api/: AGENT.md  Cargo.toml  README.md
backend/api/rest-api/: AGENT.md  README.md
backend/cli/: AGENT.md  Cargo.toml  README.md
backend/cli/src/: AGENT.md  README.md  main.rs
backend/intelligence/: AGENT.md  README.md
backend/intelligence/emotion-detection/: AGENT.md  Cargo.toml  README.md
backend/intelligence/vibe-social-engine/: AGENT.md  Cargo.toml  README.md
backend/services/: AGENT.md  README.md
backend/services/aw-server-rust/: AGENT.md  Cargo.toml  README.md
backend/services/etl-orchestrator/: AGENT.md  Cargo.toml  README.md
backend/services/event-gateway/: AGENT.md  Cargo.toml  README.md
backend/services/public-profile-api/: AGENT.md  Cargo.toml  README.md
backend/services/public-recognition-service/: Cargo.toml  README.md
backend/services/stripe-webhook-handler/: AGENT.md  Cargo.toml  README.md
backend/services/summarizer-job/: AGENT.md  Cargo.toml  README.md
backend/services/vectorizer-service/: AGENT.md  Cargo.toml  README.md
backend/shared/: AGENT.md  README.md
backend/watchers/: AGENT.md  README.md
backend/watchers/aw-watcher-audio/: AGENT.md  Cargo.toml  README.md
backend/watchers/aw-watcher-kdevelop/: AGENT.md  Cargo.toml  README.md
backend/watchers/aw-watcher-terminal/: AGENT.md  Cargo.toml  README.md
backend/watchers/aw-watcher-window/: AGENT.md  Cargo.toml  (+1 more)
(+196 files in other folders)
